@startuml
'https://plantuml.com/use-case-diagram

class TrafficManager {
}

class Ship {
 - mmsi
 - shipName
 - imoId
 - numberOfEnergyGenerators
 - generatorsPowerOutput
 - callSign
 - vesselType
 - lenght
 - width
 - capacity
 - draft
}

class ShipDynamicFields {
 - dateTime
 - long
 -lat
 -sog
 -cog
 -heading
 -position
 -transceiverClass
}

class Port {
 - code
 - port
 - continent
 - country
 - lat
 - long
}

TrafficManager"1" -- "1..*"Ship : > controls
Ship"1" -- "1"ShipDynamicFields :> has
Port"1" -- "1..*"Ship :> contains
@enduml